// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NewTabLink /> renders matches previous snapshot 1`] = `
<a
  className="new-tab-link "
  href="http://example.com"
  onClick={undefined}
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    className="sr-only"
  >
    …Link will open in a new browser tab.
  </span>
</a>
`;

exports[`<NewTabLink /> renders renders children inside link 1`] = `
<a
  className="new-tab-link "
  href="http://example.com"
  onClick={undefined}
  rel="noopener noreferrer"
  target="_blank"
>
  <div />
  <span
    className="sr-only"
  >
    …Link will open in a new browser tab.
  </span>
</a>
`;
